2002-06-26  Marcus Brinkmann  <marcus@gnu.org>

	* Makefile (DIST_FILES): Variable removed.
	(MIGSTUBS): Use fs_notifyUser.o, not ourfs_notifyUser.o.
	* ourfs_notify.defs: File removed.
	* diskfs.h (struct node): New members DIRMOD_TICK and
	FILEMOD_TICK.
	* node-make.c (diskfs_make_node): Initialize DIRMOD_TICK and
	FILEMOD_TICK.
	* dir-chg.c: Include "fs_notify_U.h" instead "ourfs_notify_U.h".
	(diskfs_S_dir_notice_changes): Use new dir_changed invocation
	instead nowait_dir_changed.
	(diskfs_notice_dirchange): Likewise.  Increase tick number.
	Ignore send timeout error.
	* file-chg.c: Include "fs_notify_U.h" instead "ourfs_notify_U.h".
	(diskfs_S_file_notice_changes): Use new file_changed invocation
	instead nowait_file_changed.
	(diskfs_notice_filechange): Likewise.  Increase tick number.
	Ignore send timeout error.

2002-06-13  Roland McGrath  <roland@frob.com>

	* dir-readdir.c (diskfs_S_dir_readdir): Revert last change.

2002-06-08  Roland McGrath  <roland@frob.com>

	* io-identity.c (diskfs_S_io_identity): Use ino_t for FILENO.

	* dir-readdir.c (diskfs_S_dir_readdir): Use vm_size_t for AMT.

	* diskfs.h (struct node): Use io_statbuf_t instead of struct stat.
	(struct node): Use ino64_t for cache_id.
	(struct node): Use loff_t instead of off_t.
	(diskfs_grow, diskfs_truncate, diskfs_node_rdwr): Likewise.
	(diskfs_notice_filechange): Likewise.
	(diskfs_cached_lookup): Use ino64_t for CACHE_ID argument.

2002-05-26  Roland McGrath  <roland@frob.com>

	* dir-unlink.c (diskfs_S_dir_unlink): Return EPERM instead of EISDIR,
	as per POSIX.

2002-05-12  Roland McGrath  <roland@frob.com>

	* dir-lookup.c (diskfs_S_dir_lookup): Fail with EACCES instead of
	EOPNOTSUPP when attempting to open a special file for io or exec.

2002-05-11  Roland McGrath  <roland@frob.com>

	* trans-callback.c (_diskfs_translator_callback1_fn): Add an assert
	that netfs_get_translator not fail with EOPNOTSUPP.

2001-11-20  Neal H Walfield  <neal@cs.uml.edu>
